// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RemoveModal /> should render 1`] = `
<ModalDialog
  headerText="Remove bar"
  label="Remove"
  modalStyle="danger"
  onHide={[MockFunction]}
  show={true}
>
  <Modal__DialogBody>
    <span>
      Are you sure you want to remove 
      <strong>
        Foo
      </strong>
      ?
    </span>
  </Modal__DialogBody>
  <Modal__DialogFooter
    style={
      Object {
        "border": "none",
      }
    }
  >
    <Button
      color="red"
      disabled={false}
      icon="check"
      onClick={[MockFunction]}
      tipPlacement="top"
      type="button"
    >
      Confirm
    </Button>
  </Modal__DialogFooter>
</ModalDialog>
`;

exports[`<RemoveModal /> should render when [show=false] 1`] = `
<ModalDialog
  headerText="Remove bar"
  label="Remove"
  modalStyle="danger"
  onHide={[MockFunction]}
  show={false}
>
  <Modal__DialogBody>
    <span>
      Are you sure you want to remove 
      <strong>
        Foo
      </strong>
      ?
    </span>
  </Modal__DialogBody>
  <Modal__DialogFooter
    style={
      Object {
        "border": "none",
      }
    }
  >
    <Button
      color="red"
      disabled={false}
      icon="check"
      onClick={[MockFunction]}
      tipPlacement="top"
      type="button"
    >
      Confirm
    </Button>
  </Modal__DialogFooter>
</ModalDialog>
`;

exports[`<RemoveModal /> should render with message 1`] = `
<ModalDialog
  headerText="Remove bar"
  label="Remove"
  modalStyle="danger"
  onHide={[MockFunction]}
  show={true}
>
  <Modal__DialogBody>
    Are you sure about this?
  </Modal__DialogBody>
  <Modal__DialogFooter
    style={
      Object {
        "border": "none",
      }
    }
  >
    <Button
      color="red"
      disabled={false}
      icon="check"
      onClick={[MockFunction]}
      tipPlacement="top"
      type="button"
    >
      Confirm
    </Button>
  </Modal__DialogFooter>
</ModalDialog>
`;
